default/objects/White_Space_Cell__c/White_Space_Cell__c.object-meta.xml
<CustomObject>
    <label>White Space Cell</label>
    <nameField>
        <label>White Space Cell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>White Space Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>