default/objects/White_Space_Cell__c/fields/Highlight__c.field-meta.xml
<CustomField>
    <fullName>Highlight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Highlight</label>
    <referenceTo>WS_Highlight__c</referenceTo>
    <relationshipLabel>White Space Cells</relationshipLabel>
    <relationshipName>White_Space_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>