default/objects/White_Space_Cell__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <description>Generic Information about a cell</description>
    <label>Info</label>
    <type>TextArea</type>
</CustomField>