default/objects/White_Space_Cell__c/fields/Primary_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Amount_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Amount Type</label>
    <referenceTo>White_Space_Amount_Type__c</referenceTo>
    <relationshipLabel>White Space Cells</relationshipLabel>
    <relationshipName>White_Space_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>