default/objects/White_Space_Cell__c/fields/White_Space__c.field-meta.xml
<CustomField>
    <fullName>White_Space__c</fullName>
    <label>White Space</label>
    <referenceTo>White_Space__c</referenceTo>
    <relationshipLabel>White Space Cells</relationshipLabel>
    <relationshipName>White_Space_Cells</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>