default/objects/White_Space_Cell__c/fields/White_Space_Row__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Row__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Row</label>
    <referenceTo>White_Space_Row__c</referenceTo>
    <relationshipLabel>White Space Cells</relationshipLabel>
    <relationshipName>White_Space_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>